spinner + minor cosmetics

--- a/src/Pages/UserList/UserList.scss
+++ b/src/Pages/UserList/UserList.scss
@@ -1,9 +1,9 @@
 .userlist {
-  margin-top: 19px;
+  margin-top: 24px;
   margin-left: 34px;
 
   width: 80%;
-
+  height: 100vh;
   display: flex;
   flex-direction: column;
 
