--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,8 +1,8 @@
 .sidebar {
   width: 150px;
-  // height: 100%;
-  // background-color: #bdbdbd;
-  flex: 1;
+  height: 1200px;
+  background-color: #bdbdbd;
+  
   &__button {
     position: absolute;
     top: 60px;
