--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "bootstrap/dist/css/bootstrap.min.css";
+
 * {
   margin: 0;
   padding: 0;
@@ -10,28 +12,25 @@
 .app {
   display: flex;
   flex-direction: row;
-    
-//   position: absolute;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -31%);
-  
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+
+  height: 100%;
 }
 
 .app__list {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 510px;
-  height: 100%;
-}
-
-.app__sidebar {
-    //align-items: stretch;
-    background-color: #bdbdbd;
+  height: 100vh;
 }
 
 .app__loader {
   align-self: center;
-  margin-top: 5rem;
+  margin-top: 10rem;
 }
