--- a/src/Pages/UserDetails/UserDetails.scss
+++ b/src/Pages/UserDetails/UserDetails.scss
@@ -1,7 +1,7 @@
 .details {
   margin-top: 19px;
   margin-left: 34px;
-  width: 100%;
+  width: 80%;
   height: 100vh;
   
 
@@ -79,6 +79,9 @@ textarea {
   font-size: 10px;
   resize: none;
   height: 55px;
+  &:focus {
+    outline: none;
+}
 }
 
 label {
